--- a/index.html
+++ b/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monthly Expense Tracker</title>
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
-    <script src="scripts/index.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Monthly Expense Tracker</title>
+		<link rel="stylesheet" href="styles/style.css" />
+	</head>
+	<body>
+		<main>
+			<header>
+				<h1>💰 Monthly Expense Tracker</h1>
+				<p>Kelola pengeluaran bulanan Anda dengan mudah dan terorganisir</p>
+			</header>
+
+			<section class="budget">
+				<div class="budget-card">
+					<h3>💰 Uang Bulanan</h3>
+					<div class="budget-input-group">
+						<input
+							type="number"
+							id="monthlyBudget"
+							placeholder="Masukkan gaji/uang bulanan"
+							min="1"
+							required />
+						<button class="btn-primary" onclick="setBudget()">
+							Set Budget
+						</button>
+					</div>
+					<div id="budgetDisplay" class="budget-display">
+						<div class="budget-amount">Rp 0</div>
+						<button class="btn-edit" onclick="editBudget()">✏️ Edit</button>
+					</div>
+				</div>
+				<div id="budgetAlert" class="budget-alert"></div>
+			</section>
+
+			<section class="stats">
+				<div class="stat-card">
+					<div class="stat-value" id="totalExpenses">Rp 0</div>
+					<div class="stat-label">Total Pengeluaran</div>
+				</div>
+				<div class="stat-card">
+					<div class="stat-value" id="paidExpenses">Rp 0</div>
+					<div class="stat-label">Sudah Lunas</div>
+				</div>
+				<div class="stat-card">
+					<div class="stat-value" id="unpaidExpenses">Rp 0</div>
+					<div class="stat-label">Belum Lunas</div>
+				</div>
+				<div class="stat-card" id="remainingCard">
+					<div class="stat-value" id="remainingBudget">Rp 0</div>
+					<div class="stat-label">Sisa Budget</div>
+				</div>
+			</section>
+
+			<section class="form">
+				<h2>➕ Tambah Pengeluaran Baru</h2>
+				<form id="expenseForm">
+					<div class="form-group">
+						<label for="amount">Jumlah (Rp)</label>
+						<input type="number" id="amount" name="amount" required min="0" />
+					</div>
+					<div class="form-group">
+						<label for="category">Kategori</label>
+						<select id="category" name="category" required>
+							<option value="">Pilih Kategori</option>
+							<option value="Makanan & Minuman">🍽️ Makanan & Minuman</option>
+							<option value="Transportasi">🚗 Transportasi</option>
+							<option value="Belanja">🛒 Belanja</option>
+							<option value="Tagihan">📄 Tagihan</option>
+							<option value="Hiburan">🎬 Hiburan</option>
+							<option value="Kesehatan">⚕️ Kesehatan</option>
+							<option value="Pendidikan">📚 Pendidikan</option>
+							<option value="Lainnya">📦 Lainnya</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="date">Tanggal Transaksi</label>
+						<input type="datetime-local" id="date" name="date" required />
+					</div>
+					<div class="form-group">
+						<label for="status">Status Pembayaran</label>
+						<select id="status" name="status" required>
+							<option value="">Pilih Status</option>
+							<option value="Lunas">✅ Lunas</option>
+							<option value="Belum Lunas">❌ Belum Lunas</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="description">Deskripsi</label>
+						<textarea
+							id="description"
+							name="description"
+							rows="3"
+							placeholder="Deskripsi detail transaksi..."></textarea>
+					</div>
+					<div style="margin-top: 20px">
+						<button type="submit" class="btn-primary" id="submitBtn">
+							Tambah Pengeluaran
+						</button>
+						<button type="button" class="btn-secondary" id="cancelBtn">
+							Batal Edit
+						</button>
+					</div>
+				</form>
+			</section>
+
+			<section class="expenses">
+				<h2>📋 Daftar Pengeluaran</h2>
+				<div id="expensesList">
+					<div class="no-expenses">
+						Belum ada pengeluaran yang tercatat.<br />
+						Mulai tambahkan pengeluaran pertama Anda! 🚀
+					</div>
+				</div>
+			</section>
+		</main>
+		<script src="scripts/index.js"></script>
+	</body>
 </html>
